# glm-plan-usage2

./: .gitignore  Cargo.toml  Droid终端中文设置方法.md  README.md  README_en.md  glm-plan-usage-合并报告.md
.github/workflows/: ci.yml  release.yml
docs/: api-research.md
npm/: publish-local.sh
npm/main/: README.md  package.json
npm/main/scripts/: postinstall.js
npm/scripts/: prepare-packages.js
src/: cli.rs  lib.rs  main.rs  terminal.rs
src/api/: client.rs  kimi_client.rs  kimi_types.rs  minimax_client.rs  minimax_types.rs  mod.rs  types.rs
src/config/: claude.rs  loader.rs  mod.rs  types.rs
src/core/: mod.rs  statusline.rs
src/core/segments/: glm_usage.rs  kimi_usage.rs  minimax_usage.rs  mod.rs
