[package]
name = "glm-plan-usage"
version = "0.0.3"
edition = "2021"
description = "GLM plan usage plugin for Claude Code"
authors = ["Alice"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
ureq = { version = "2.10", features = ["json", "native-tls"], default-features = false }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
